Fixed spacing issues on the session form

--- a/app/assets/stylesheets/components/homepage.scss
+++ b/app/assets/stylesheets/components/homepage.scss
@@ -11,13 +11,15 @@
   position: relative;
   justify-content: space-between;
   flex-wrap: nowrap;
-  padding-top: 10px;
+  padding-top: 11px;
+  padding-bottom: 10px;
+
 }
 
 .login-logo {
   width: 110px;
   height: 50px;
-  @media (max-width: 768px) {
+  @media (max-width: 1160px) {
     padding: 0 5px;
     max-width: 75px;
   }
@@ -27,9 +29,13 @@
   font-size: 1rem;
   font-weight: 600;
   border-radius: .3em;
-  padding: 7px 7px;
+  padding: 10.5px 12px;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.6);
+
+  @media (max-width: 1160px) {
+    padding: 6.5px 7.5px;
+  }
 }
 
 .joinnow-nav:hover {
@@ -42,7 +48,7 @@
   margin-left: 0.5rem;
   color: #0a66c2;
   border-radius: 25px;
-  padding: 7px 15px;
+  padding: 9.5px 23px;
   margin-right: 16px;
   font-size: 1rem;
   font-weight: 600;
@@ -55,6 +61,11 @@
   // border-color: rgba(0, 0, 0, 0);
   border-style: solid;
   border-width: 1px;
+
+  @media (max-width: 1160px) {
+    padding: 5.5px 15px;
+    margin-left: 0;
+  }
 }
 
 .signin-nav:hover,
@@ -79,7 +90,8 @@
   align-items: center;
   flex-wrap: wrap;
   margin: auto;
-  @media (max-width: 769px) {
+
+  @media (max-width: 810px) {
     margin: auto;
     min-height: 0px;
   }
@@ -93,7 +105,7 @@
   padding-left: 5px;
   padding-bottom: 24px;
   color: #8f5849;
-  @media (max-width: 769px) {
+  @media (max-width: 810px) {
     text-align: center;
     font-size: 24px;
     width: 100%;
@@ -104,7 +116,7 @@
 
 .homepage-picture {
   width: 350px;
-  @media (max-width: 769px) {
+  @media (max-width: 810px) {
     margin: auto;
     height: 220px;
     min-width: 374px;
@@ -117,4 +129,11 @@
   position: fixed;
   right: 0%;
   bottom: 0px;
+}
+
+.homepage-nav-right {
+  @media (max-width: 300px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
